syntax = "proto2";

package state;

option go_package = "github.com/tcncloud/protoc-gen-state/state;state";

import "google/protobuf/descriptor.proto";

message StringFieldOptions {
  optional string create = 1;
  optional string get    = 2;
  optional string list   = 3;
  optional string update = 4;
  optional string delete = 5;
  optional string custom = 6;
}

message IntFieldOptions {
  optional int64 create = 1;
  optional int64 get    = 2;
  optional int64 list   = 3;
  optional int64 update = 4;
  optional int64 delete = 5;
  optional int64 custom = 6;
}


extend google.protobuf.MessageOptions { 
  optional StateMessageOptions state_options = 550006;
}

message StateMessageOptions {
  required StateMessageType type = 1;
}

enum StateMessageType {
  REDUX_STATE = 0;
  CUSTOM_ACTION = 1;
  EXTERNAL_LINK = 2;
}


extend google.protobuf.FieldOptions {
  optional int64 timeout                  = 550001;
  optional int64 retries                  = 550002;
  optional StringFieldOptions method      = 550003;
  optional IntFieldOptions method_timeout = 550004;
  optional IntFieldOptions method_retries = 550005;
}

enum OutputTypes {
  redux3 = 0;
  redux4 = 1;
  mobx = 2;
}

message StateFileOptions {
  optional int64 default_timeout            = 1;
  optional int64 default_retries            = 2;
  // turn on debug logging
  optional bool debug                       = 3;
  // port to be used for api calls in epics
  optional int64 port                       = 4;
  // debounce time for api calls in epics
  optional int64 debounce                   = 5;
  // sets custom import path for proto typescript files
  optional string protoc_ts_path            = 6;
  // static hostname string for api calls
  optional string hostname                  = 7;
  // hostname for api calls location in redux
  optional string hostname_location         = 8;
  // add authorization bearer header using the token at this location in redux
  optional string auth_token_location       = 9;
  required OutputTypes output_type          = 10;
}

extend google.protobuf.FileOptions {
  optional StateFileOptions state_file_options = 550007;
}
